mock 支付接口 增加真机调试配置文件

--- a/data/hotel_detail.yaml
+++ b/data/hotel_detail.yaml
@@ -1,5 +1,5 @@
 goto_hotel_scheduled:
-  - selector: view
+  - selector: view[class='title']
     params:
       inner_text: ${room_type}
       max_timeout: 30
