--- a/conf/pytest.ini
+++ b/conf/pytest.ini
@@ -3,9 +3,9 @@ addopts = -s --alluredir report
 # 测试路径
 testpaths = ../testcases
 # 测试文件名
-python_files = test_order.py
+python_files = test_*.py
 # 测试类名
-python_classes = TestOrder
+python_classes = Test*
 # 测试的方法名
 python_functions = test_*
 
