--- a/data/hotel_scheduled.yaml
+++ b/data/hotel_scheduled.yaml
@@ -21,3 +21,13 @@ get_fee:
       inner_text: 明细
       max_timeout: 30
     action: click
+  - selector: .item.item.last-item.last-item.tar.tar
+    params:
+      max_timeout: 30
+    action: get_text
+goto_order_detail:
+  - selector: .link
+    params:
+      inner_text: 查看订单
+      max_timeout: 30
+    action: click
