--- a/data/order_detail.yaml
+++ b/data/order_detail.yaml
@@ -3,14 +3,19 @@ get_amount_paid:
     params:
       max_timeout: 30
     action: get_text
-
 get_username:
   - selector: .fc-111A34.fs-30.margin-top22.room-info-bottom-line
     params:
       max_timeout: 30
     action: get_text
 get_switch:
-  - selector: .color_111A34.fs26.ml20
+  - selector: .fc-111A34.fs-26.ml20
     params:
       max_timeout: 30
     action: get_text
+cancel_order:
+  - selector: button
+    params:
+      text_contains: 取消订单
+      max_timeout: 30
+    action: click
