--- a/conf/pytest.ini
+++ b/conf/pytest.ini
@@ -3,7 +3,7 @@ addopts = -s --alluredir report
 # 测试路径
 testpaths = ../testcases
 # 测试文件名
-python_files = test_day_order.py
+python_files = test_*.py
 # 测试类名
 python_classes = Test*
 # 测试的方法名
