--- a/data/hotel_detail.yaml
+++ b/data/hotel_detail.yaml
@@ -9,8 +9,9 @@ goto_hotel_scheduled:
       inner_text: 立即预订
       max_timeout: 30
     action: click
+
 get_root_status:
-  - selector: view[class='hd'][data-roomtype='311']>.more>.book_btn.no
+  - selector: view[class='hd'][data-roomtype='${room_code}']>.more>.book_btn.no
     params:
       max_timeout: 30
     action: get_text
